--- a/Web App/views/home.ejs
+++ b/Web App/views/home.ejs
@@ -1,7 +1,7 @@
 <%- include('header', {appTitle: appTitle}) %>
 
 <div class="home">
-    <h1>hello</h1>
+    <h1>Welcome to Smart Gaze</h1>
 </div>
 
 <%- include('footer') %>
