--- a/Web App/views/home.ejs
+++ b/Web App/views/home.ejs
@@ -1,4 +1,4 @@
-<%- include('header', {appTitle: appTitle}) %>
+<%- include('header', {siteTitle: siteTitle, appTitle: appTitle}) %>
 
 <div class="home">
     <h1>Welcome to Smart Gaze</h1>
