--- a/Web App/views/home.ejs
+++ b/Web App/views/home.ejs
@@ -2,7 +2,7 @@
 
 <div class="home">
     <h1>Welcome to Smart Gaze</h1>
-    <h1><%= uid %></h1>
+    <h1><%= uname %></h1>
 </div>
 
 <%- include('footer') %>
