--- a/Web App/django_web-app/templates/home.html
+++ b/Web App/django_web-app/templates/home.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -82,6 +84,9 @@
             margin: 0 auto;
             display: block;
             transition: background-color 0.3s;
+        }
+
+        a {
             text-decoration: none;
         }
 
@@ -93,25 +98,56 @@
         .message {
             text-align: center;
             font-size: medium;
+            font-weight: 1000;
             color: red;
+            margin-top: 20px;
             margin-bottom: 10px;
+        }
+
+        .spotify-button {
+            background-color: #1db954;
+            color: white;
+            padding: 10px 15px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            margin-top: 50px;
+            display: flex;
+            align-items: center;
+            transition: background-color 0.3s;
+        }
+
+        .spotify-button:hover {
+            background-color: #24db5a;
+        }
+
+        .spotify-logo {
+            max-width: 20px;
+            height: 20px;
+            margin-right: 10px;
         }
     </style>
 </head>
 
 <body>
-    <div class="contatiner">
+    <div class="container">
         <h1>Welcome {{fname}}! </h1>
         <button type="submit" class="logout"><a href="{% url 'user_logout' %}">Logout</a></button>
+        <div class="message">
+            {% for msg in messages %}
+            {{ msg }}
+            {% endfor %}
+        </div>
+
+        <button class="spotify-button">
+            <!-- <img src="../static/spotify (1).svg" alt="Spotify Logo" class="spotify-logo"> -->
+            <a href="{% url 'spotify_login' %}">Login to Spotify</a>
+        </button>
+
         <div class="main">
             <div class="forms">
                 <form class="form" action="{% url 'save_todo' %}" method="post">
                     {% csrf_token %}
-                    <div class="message">
-                        {% for msg in messages %}
-                        {{ msg }}
-                        {% endfor %}
-                    </div>
                     <h2>Create a Task</h2>
                     {{todoform.as_p}}
                     <button type="submit">Create Task</button>
